--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@ body {
   width: 100vw;
   /* your properties here */
   display: grid;
-  grid-template: auto / 1fr 1fr 1fr  1fr 2fr;
+  grid-template: auto / 10% 20% 30% 40%;
 }
 
 .grid-item {
