--- a/index.css
+++ b/index.css
@@ -10,6 +10,7 @@ body {
   /* your properties here */
   display: grid;
   grid-template: auto / 125px 10% 20% 30% 40%;
+  grid-auto-rows: 50px;
 }
 
 .grid-item {
