--- a/index.css
+++ b/index.css
@@ -11,7 +11,7 @@ body {
   display: grid;
   grid-template: auto / 10% 20% 30% 40%;
   grid-auto-rows: 50px;
-  grid-gap: 5%;
+  grid-gap: 5px;
 }
 
 .grid-item {
